# otus_lab_10

./: CMakeLists.txt
.github/workflows/: github-actions.yml
include/: async.h  bulk.h  command.h  parser.h  parsermanager.h  printer.h  printerdispatcher.h  server.h
src/: async.cpp  bulk.cpp  main.cpp  parser.cpp  parsermanager.cpp  printer.cpp  printerdispatcher.cpp  server.cpp
tests/: bulk_test.cpp
